fix viewport on IE 10 and allow to be added to homescreen on android

--- a/tickets/static/tickets/handprints.css
+++ b/tickets/static/tickets/handprints.css
@@ -17,3 +17,9 @@ body {
 .pre-formatted-text {
     white-space: pre-wrap
 }
+
+@-webkit-viewport{width:device-width}
+@-moz-viewport{width:device-width}
+@-ms-viewport{width:device-width}
+@-o-viewport{width:device-width}
+@viewport{width:device-width}
